fix(menu): fix introBox visibility issue on mobile devices

--- a/app/styles/menu.scss
+++ b/app/styles/menu.scss
@@ -10,6 +10,7 @@
   overflow: auto;
   opacity: 0;
   padding: $offset-top-bottom-lg 0;
+  pointer-events: none;
   position: fixed;
   top: 0;
   visibility: hidden;
@@ -21,12 +22,15 @@
     transition: opacity 1s;
     visibility: visible;
   }
+
+  &--intro {
+    pointer-events: all;
+  }
   
   @media only screen and (min-width: $media-lg) {
 
     & {
       box-shadow: inset 0 0 150px rgba($color: #000000, $alpha: 0.2);
-      pointer-events: none;
 
       //: PAGE INDICATOR                                                    ://
       &__indicator {
