--- a/app/styles/visuals.scss
+++ b/app/styles/visuals.scss
@@ -5,6 +5,7 @@
   height: 100%;
   left: 0;
   min-height: 100vh;
+  pointer-events: none;
   position: fixed;
   top: 0;
   visibility: hidden;
@@ -69,11 +70,13 @@
   }
   //| PAGE INTROBOX                                                         |//
   &__introBox {
+    height: $menu-item-height;
     left: 0;
     opacity: 0;
     pointer-events: none;
     position: fixed;
     transition: opacity $menu-sm-first-timeout, top $menu-sm-first-timeout;
+    width: $menu-item-height;
     z-index: -1;
     
     &--content {
